--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap');
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 780px) {
    
     .burger{
         display: none;
@@ -38,6 +38,8 @@
     .a{
         color: white;
         font-size: 1.5em;
+        font-family: 'Quattrocento Sans', sans-serif;
+        text-decoration: none;
     }
     
     .inside{
@@ -45,10 +47,66 @@
         height: 70vh;
         margin-top: 10vh;
         background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    /* ACCUEIL */
+    h2{
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    h1{
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    h3{
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    .psycho{
+        font-size: 25px;
+    }
+    .cabinet{
+        font-size: 30px;
+    }
+    .name_psy{
+        font-size: 30px;
+    }
+    .adresse{
+        margin-top: 5vh;
+    }
+    .in{
+        border: 1px solid black;
+        padding: 6%;
+        border-radius: 3px;
+    }
+    p{
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    /* PRATIQUE */
+    #pratique{
+        margin-top: 10vh;
+        height: 90vh;
     }
 }
-@media only screen and (max-width: 600px) {
-
+@media only screen and (max-width: 780px) {
+    .a{
+        color: white;
+        font-size: 1.5em;
+        font-family: 'Quattrocento Sans', sans-serif;
+        text-decoration: none;
+    }
     .background{
         height: 100vh;
         width: 100vw;
@@ -64,7 +122,10 @@
         background-color: white;
         margin: 0 auto;
         position: relative;
-        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     ul {
@@ -175,5 +236,47 @@
     .menu-btn:checked ~ .nav {
     right: 0;
     transition: ease-in-out 800ms;
+    }
+    /* ACCUEIL */
+    h2{
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    h1{
+        font-size: 15px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    h3{
+        font-size: 12px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
+    }
+    .psycho{
+        font-size: 15px;
+    }
+    .cabinet{
+        font-size: 25px;
+    }
+    .name_psy{
+        font-size: 25px;
+    }
+    .adresse{
+        margin-top: 2vh;
+    }
+    .in{
+        border: none;
+        padding: 0;
+        
+    }
+    p{
+        font-size: 14px;
+        text-align: center;
+        font-family: 'Quattrocento Sans', sans-serif;
+        font-weight: lighter;
     }
 }
