--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     margin: 0;
     box-sizing: border-box;
     }
-
+.container{
+    width: 90%;
+    margin: 0 auto;
+}
 @media only screen and (min-width: 780px) {
    
     .burger{
