--- a/style.css
+++ b/style.css
@@ -84,6 +84,12 @@
     .name_psy{
         font-size: 30px;
     }
+    .name{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .adresse{
         margin-top: 5vh;
         text-align: center;
@@ -113,6 +119,12 @@
         color: white;
         font-size: 25px;
         cursor: pointer;
+    }
+    .symbole{
+        width: 75px;
+        height: 75px;
+        object-fit: cover;
+        margin: 0 auto;
     }
     /* PRATIQUE */
     #pratique{
@@ -337,6 +349,12 @@
     .name_psy{
         font-size: 25px;
     }
+    .name{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .adresse{
         margin-top: 2vh;
         text-align: center;
@@ -350,6 +368,12 @@
         text-align: center;
         font-family: 'Quattrocento Sans', sans-serif;
         font-weight: lighter;
+    }
+    .symbole{
+        width: 60px;
+        height: 60px;
+        object-fit: cover;
+        margin: 0 auto;
     }
      /* PRATIQUE */
      #pratique{
