--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@
         font-family: 'Quattrocento Sans', sans-serif;
     }
     .pra{
-        font-size: 24px;
+        font-size: .8em;
         font-family: 'Quattrocento Sans', sans-serif;
     }
     /* THERAPIE */
@@ -178,7 +178,7 @@
         padding: 2%;
     }
     .the{
-        font-size: 30px;
+        font-size: 1.7em;
     }
     /* CABINET */
     #cabinet{
@@ -210,7 +210,7 @@
     .title{
         font-size: 20px;
        
-        margin-top: 5vh;
+        margin-top: 2vh;
     }
     hr{
         width: 60%;
@@ -459,7 +459,7 @@
     }
     .child, .teenager, .adult{
         width: 100%;
-        padding: 2%;
+        padding: 0%;
     }
     .the{
         font-size: 20px;
