--- a/style.css
+++ b/style.css
@@ -9,7 +9,18 @@
     margin: 0 auto;
 }
 @media only screen and (min-width: 780px) {
-   
+    .rond{
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+        margin-top: 10vh;
+    }
+    .column{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .burger{
         display: none;
     }
@@ -193,14 +204,20 @@
     .pic{
         width: 42%;
         margin: 2%;
-        background-color: rgb(141, 219, 158);
-        height: 250px;
+        background-color: rgb(56, 107, 67);
+        height: 350px;
         margin: 0 auto;
         margin-top: 5vh;
         margin-bottom: 5vh;
     }
+    .trois{
+        margin-top: 5vh;;
+    }
 }
 @media only screen and (max-width: 780px) {
+    .rond{
+        display: none;
+    }
     .under_title{
         font-weight: bold;
         text-align: center;
