--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     margin: 0 auto;
 }
 @media only screen and (min-width: 780px) {
+    .docto{
+        margin-top: 1.8vh;
+        width: 150px;
+        height: 50px;
+    }
     .rond{
         width: 75px;
         height: 75px;
@@ -45,7 +50,7 @@
         flex-direction: row;
     }
     .li_pc{
-        width: 20%;
+        width: 16.666%;
         list-style: none;
         line-height: 10vh;
         text-align: center;
