--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
 }
 @media only screen and (min-width: 780px) {
     .docto{
-        margin-top: 1.8vh;
-        width: 150px;
-        height: 50px;
+        margin-top: 1.5vh;
+        width: 25vh;
+        height: 7vh;
     }
     .rond{
         width: 75px;
