--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@
        
     }
     button{
-        margin-top: 5vh;
-        width: 250px;
-        height: 70px;
+        margin-top: 2vh;
+        width: 20vw;
+        height: 8vh;
         background-color: black;
         border: none;
         border-radius: 3px;
