--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
         border-bottom: 2px solid black;
         border-right: 2px solid black;
         margin-left: 90%;
+        margin-top: 1%;
 
     }
     .docto{
