--- a/style.css
+++ b/style.css
@@ -11,26 +11,26 @@
 @media only screen and (min-width: 780px) {
     .englobe::before{
         content: "";
+        background-image: url("menu.jpg");
         display: block;
         width: 30px;
         height: 30px;
-        border-top: 2px solid black;
-        border-left: 2px solid black;
+        opacity: 0.5;
         position: absolute;
         margin-right: 5%;
-       
+        z-index: -9999;
     }
     .englobe::after{
         content: "";
+        background-image: url("menu.jpg");
         display: block;
         position: absolute;
         width: 30px;
         height: 30px;
-        border-bottom: 2px solid black;
-        border-right: 2px solid black;
+        opacity: 0.5;
         margin-left: 90%;
         margin-top: 1%;
-
+        z-index: -9999;
     }
     .docto{
         margin-top: 1.5vh;
