--- a/style.css
+++ b/style.css
@@ -11,23 +11,23 @@
 @media only screen and (min-width: 780px) {
     .englobe::before{
         content: "";
-        background-image: url("menu.jpg");
         display: block;
         width: 30px;
         height: 30px;
-        opacity: 0.5;
+        border-top: 2px solid black;
+        border-left: 2px solid black;
         position: absolute;
         margin-right: 5%;
         z-index: -9999;
     }
     .englobe::after{
         content: "";
-        background-image: url("menu.jpg");
         display: block;
         position: absolute;
         width: 30px;
         height: 30px;
-        opacity: 0.5;
+        border-bottom: 2px solid black;
+        border-right: 2px solid black;
         margin-left: 90%;
         margin-top: 1%;
         z-index: -9999;
