--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-bottom: 5%;
     }
     .inner{
         background-color: white;
