--- a/style.css
+++ b/style.css
@@ -241,13 +241,13 @@
     }
     /* CONTACT */
     #contact{
-        height: 100vh;
+        height: 90vh;
         text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 5%;
+        margin-bottom: 10vh;
     }
     .inner{
         background-color: white;
