--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@
         margin-top: 5vh;;
     }
     /* CONTACT */
-    #contact{
+    #contact2{
         height: 100vh;
         text-align: center;
         display: flex;
