--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@
     .englobe::before{
         content: "";
         display: block;
+        position: absolute;
         width: 30px;
         height: 30px;
         border-top: 2px solid black;
         border-left: 2px solid black;
-        position: absolute;
-        margin-right: 5vw;
+  
+        left: 5vh;
         z-index: -9999;
     }
     .englobe::after{
@@ -28,7 +29,7 @@
         height: 30px;
         border-bottom: 2px solid black;
         border-right: 2px solid black;
-        margin-left: 90vw;
+        right: 5vh;
         margin-top: 1vh;
         z-index: -9999;
     }
