--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@
         margin-top: 15px;
     }
     .title{
-        font-size: 20px;
+        font-size: 1em;
        
         margin-top: 2vh;
     }
