--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
     margin: 0 auto;
 }
 @media only screen and (min-width: 780px) {
+    .a:hover{
+        font-weight: bold;
+    }
     .englobe::before{
         content: "";
         display: block;
