--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 @media only screen and (min-width: 780px) {
     .a:hover{
-        text-decoration: white;
+        text-decoration: white!important;
     }
     .englobe::before{
         content: "";
