--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     .background{
         height: 100vh;
         width: 100%;
-        background: linear-gradient(#408080, #9BB586);
+        background: linear-gradient(#2b5353, #738d5d);
         display: flex;
         flex-direction: column;
         align-items: center;
