--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        box-shadow: 3px 3px 3px rgb(255, 251, 0);
     }
 
     ul {
