--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@
         z-index: -9999;
     }
     .docto{
-        margin-top: 1.5vh;
-        width: 25vh;
-        height: 7vh;
+        margin-top: 7px;
+        width: 22vh;
+        height: 50px;
     }
     .rond{
         width: 75px;
