--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@
         margin-top: 2.5vh;
     }
     .more2{
-        margin-top: 15vh;
+        margin-top: 14.7vh;
     }
     hr{
         width: 40%;
@@ -287,13 +287,14 @@
         width: 33%;
         height: auto;
         margin: 2%;
+        padding: 2%;
         border: 1px solid black;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         text-align: center;
-        height: 27.5vh;
+        height: auto;
         border-radius: 3px;
     }
     .contact{
@@ -302,6 +303,9 @@
     }
     .fas{
         font-size: 30px;
+    }
+    .more_contact{
+        margin-top: 35px!important;
     }
     
 }
@@ -621,4 +625,5 @@
     .fas{
         font-size: 25px;
     }
+    
 }
