--- a/style.css
+++ b/style.css
@@ -311,8 +311,8 @@
         width: 22vw;
         height: 75px;
         object-fit: cover;
-        margin: 0;
-        padding: 0;
+        margin-top: 10px;
+
     }
     
 }
