--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     }
 
 @media only screen and (min-width: 780px) {
+    .none{
+        display: none;
+    }
     .container{
         width: 90%;
         margin: 0 auto;
@@ -318,12 +321,23 @@
     
 }
 @media only screen and (max-width: 780px) {
+    
     .container{
         width: 75%;
         margin: 0 auto;
     }
     .rond{
         display: none;
+    }
+    .trois{
+        display: block!important;
+        margin: 0 auto;
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+        margin-top: 1vh;
+        margin-bottom: 30px;
+        margin-top: 15px;
     }
     .right, .absolute{
         display: none;
@@ -370,7 +384,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
+        border: 3px solid gray;
     }
 
     ul {
@@ -438,8 +452,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 45px;
-    height: 45px;
+    width: 30px;
+    height: 30px;
     }
 
     .menu-btn:checked ~ .menu-icon .navicon {
@@ -466,7 +480,7 @@
     width: 100%;
     min-height: 35vh;
     color: white;
-    background-color: rgb(17, 112, 37);
+    background-color: #2b5353;
     display: none;
     display: flex;
     align-items: center;
@@ -552,8 +566,8 @@
         
     }
     .symbole{
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
         object-fit: cover;
         margin: 0 auto;
     }
