--- a/style.css
+++ b/style.css
@@ -18,15 +18,15 @@
         margin: 0 auto;
     }
     .under:hover{
-        font-weight: bold!important;
+        font-weight: 1000!important;
     }
     .absolute{
         position: fixed;
         color: white;
         font-weight: bold;
         left: 2vw;
-        top: 4px;;
-        font-size: 1.6em;
+        top: 10px;;
+        font-size: 1.4em;
         font-family: 'Marck Script', cursive;
     }
     .right{
@@ -97,11 +97,11 @@
     .ul_pc{
         display: flex;
         flex-direction: row;
-        width: 60%;
+        width: 50%;
         margin: 0 auto;
     }
     .li_pc{
-        width: 20%;
+        width: 25%;
         list-style: none;
         line-height: 70px;
         text-align: center;
@@ -111,8 +111,25 @@
         font-size: 1.5em;
         font-family: 'Quattrocento Sans', sans-serif;
         text-decoration: none;
+        
     }
-    
+    .underline:after {    
+        background: none repeat scroll 0 0 transparent;
+        
+        content: "";
+        display: block;
+        height: 1px;
+        left: 50%;
+        position: relative;
+        margin-top: -17px;
+        background: #fff;
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+        width: 0;
+      }
+      .underline:hover:after { 
+        width: 100%; 
+        left: 0; 
+      }
     .inside{
         width: 80vw;
         height: 70vh;
@@ -179,7 +196,7 @@
     button{
         margin-top: 2vh;
         width: 20vw;
-        height: 8vh;
+        height: 6vh;
         background-color: black;
         border: none;
         border-radius: 3px;
@@ -512,20 +529,23 @@
     /* ACCUEIL */
     .a_button{
         display: block;
-        margin: 0 auto;
+        margin: 0;
        
     }
     button{
         margin-top: 2vh;
-        width: 250px;
-        height: 40px;
-        background-color: black;
+        width: 200px;
+        height: 5vh;
+        line-height: 5vh;
+        background-color: white;
         border: none;
         border-radius: 3px;
-        color: white;
-        font-size: 25px;
+        color: black;
+        font-size: 20px;
         cursor: pointer;
-    }
+        border: 1px solid black;
+        padding: 0;
+        }
     h2{
         font-size: 20px;
         text-align: center;
