--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Quattrocento Sans', sans-serif;
     }
-
+.button_acc{
+    font-family: 'Quattrocento Sans', sans-serif!important;
+  
+}
 @media only screen and (min-width: 1300px) {
     .top{
         margin-top: 20px;
@@ -198,8 +202,9 @@
     .a_button{
         display: block;
         margin: 0 auto;
-       
+        
     }
+   
     button{
         margin-top: 2vh;
         width: 20vw;
@@ -211,7 +216,9 @@
         color: black;
         font-size: 25px;
         cursor: pointer;
+        font-weight: lighter;
         border: 1px solid black;
+       
     }
     .symbole{
         width: 30px;
