--- a/style/style.css
+++ b/style/style.css
@@ -248,13 +248,17 @@ u{
     }
     .title{
         font-size: 1.6em;
-        margin-top: 1.7vh;
+        margin-top: 7vh;
+    }
+    .seance{
+        border: 1px solid rgb(184, 184, 184);
+        padding-bottom: 15px;
     }
     .more1{
         margin-top: 1.5vh;
     }
     .more2{
-        margin-top: 22vh;
+        margin-top: 19vh;
     }
     hr{
         width: 40%;
