--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@ u{
         font-weight: 1000!important;
     }
     .absolute{
+        z-index: 99999;
         position: fixed;
         color: white;
         font-weight: bold;
@@ -43,6 +44,7 @@ u{
         position: fixed;
         right: 2vw;
         top: 0.2vh;
+        z-index: 99999;
     }
     .englobe::before{
         content: "";
@@ -88,6 +90,7 @@ u{
     .burger{
         display: none;
     }
+   
     .background{
         height: 100vh;
         width: 100%;
@@ -103,6 +106,7 @@ u{
         height: 70px;
         background-image: url('../img/menu.jpg');
         box-shadow: 5px 5px 5px rgb(71, 97, 86);
+        z-index: 9999;
     }
     .ul_pc{
         display: flex;
@@ -258,7 +262,7 @@ u{
         margin-top: 1.5vh;
     }
     .more2{
-        margin-top: 19vh;
+        margin-top: 5vh;
     }
     hr{
         width: 40%;
@@ -364,6 +368,73 @@ u{
         margin-top: 10px;
 
     }
+    /* slider */
+
+    #slider {
+        z-index: 1;
+        width: 50vw;
+        position: relative;
+        overflow: hidden;
+        margin: 0 auto;
+        border-radius: 4px;
+        border: 1px solid rgb(151, 151, 151);
+      }
+      
+    #slider ul {
+        position: relative;
+        margin: 0 auto;
+        padding: 0;
+        height: 65vh;
+        width: 80vw;
+        list-style: none;
+    }
+    
+    #slider ul li {
+        position: relative;
+        display: block;
+        float: left;
+        margin: 0 auto;
+        padding: 0;
+        width: 80vw;
+        height: 65vh;
+        background: rgb(255, 255, 255);
+        text-align: center;
+    }
+    #slider ul li img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+      a.control_prev, a.control_next {
+        position: absolute;
+        top: 35%;
+        z-index: 9999;
+        display: block;
+        padding: 4% 3%;
+        width: auto;
+        height: auto;
+        background: #c7c7c7;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 18px;
+        opacity: 0.8;
+        cursor: pointer;
+      }
+      
+      a.control_prev:hover, a.control_next:hover {
+        opacity: 1;
+        -webkit-transition: all 0.2s ease;
+      }
+      
+      a.control_prev {
+        border-radius: 0 2px 2px 0;
+      }
+      
+      a.control_next {
+        right: 0;
+        border-radius: 2px 0 0 2px;
+      }
     
 }
 @media only screen and (max-width: 1300px) {
@@ -380,6 +451,7 @@ u{
         left: 15px;
         width: 22vh;
         height: 50px;
+        
     }
     .container{
         width: 75%;
