--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,11 @@
 u{
     text-decoration: underline 1px;
 }
+.telefon{
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
 @media only screen and (min-width: 1300px) {
     .top{
         margin-top: 20px;
@@ -800,5 +805,72 @@ u{
   
 
     }
+    /* slider */
+
+    #slider {
+        z-index: 1;
+        width: 100vw;
+        position: relative;
+        overflow: hidden;
+        margin: 0 auto;
+        border-radius: 4px;
+        border: transparent;
+      }
+      
+    #slider ul {
+        position: relative;
+        margin: 0 auto;
+        padding: 0;
+        height: auto;
+        width: 70vw;
+        list-style: none;
+    }
+    
+    #slider ul li {
+        position: relative;
+        display: block;
+        float: left;
+        margin: 0 auto;
+        padding: 0;
+        width: 70vw;
+        height: auto;
+        background: rgb(255, 255, 255);
+        text-align: center;
+    }
+    #slider ul li img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+      a.control_prev, a.control_next {
+        position: absolute;
+        top: 35%;
+        z-index: 9999;
+        display: block;
+        padding: 4% 3%;
+        width: auto;
+        height: auto;
+        background: #c7c7c7;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 18px;
+        opacity: 0.8;
+        cursor: pointer;
+      }
+      
+      a.control_prev:hover, a.control_next:hover {
+        opacity: 1;
+        -webkit-transition: all 0.2s ease;
+      }
+      
+      a.control_prev {
+        border-radius: 0 2px 2px 0;
+      }
+      
+      a.control_next {
+        right: 0;
+        border-radius: 2px 0 0 2px;
+      }
     
 }
