--- a/style/style.css
+++ b/style/style.css
@@ -727,6 +727,7 @@ b{
     .smaller_pic{
         width: 30px;
         height: 30px;
+        margin-top: 25px;
     }
      /* PRATIQUE */
      #pratique{
