--- a/style/style.css
+++ b/style/style.css
@@ -825,13 +825,14 @@ b{
         margin: 0 auto;
         border-radius: 4px;
         border: transparent;
+        height: 250px;
       }
       
     #slider ul {
         position: relative;
         margin: 0 auto;
         padding: 0;
-        height: auto;
+        height: 250px;
         width: 70vw;
         list-style: none;
     }
@@ -849,7 +850,7 @@ b{
     }
     #slider ul li img{
         width: 100%;
-        height: 100%;
+        height: 250px;
         object-fit: cover;
     }
       a.control_prev, a.control_next {
